<resources>
    <string name="app_name">Handy Paints</string>
    <string name="more_sizes">More sizes</string>
    <string name="more_colors">More colors</string>
    <string name="clear_all">Erase all</string>
    <string name="choose_the_color">Choose the color:</string>
    <string name="brush_size">Brush size:</string>
    <string name="eraser_size">Eraser size:</string>
    <string name="white_color">white_color</string>
    <string name="black_color">black_color</string>
    <string name="green_color">green_color</string>
    <string name="red_color">red_color</string>
    <string name="yellow_color">yellow_color</string>
    <string name="blue_color">blue_color</string>
    <string name="orange_color">orange_color</string>
    <string name="sky_blue_color">sky_blue_color</string>
    <string name="dark_violet_color">dark_violet_color</string>
    <string name="hot_pink_color">hot_pink_color</string>
    <string name="green_yellow_color">green_yellow_color</string>
    <string name="saddle_brown_color">saddle_brown_color</string>
    <string name="cyan_color">cyan_color</string>
    <string name="dark_green_color">dark_green_color</string>
    <string name="brown_color">brown_color</string>
    <string name="gold_color">gold_color</string>
    <string name="peach_color">peach_color</string>
    <string name="light_yellow_color">light_yellow_color</string>
    <string name="salmon_color">salmon_color</string>
    <string name="steel_grey_color">steel_grey_color</string>
    <string name="violet_color">violet_color</string>
    <string name="magenta_color">magenta_color</string>
    <string name="grey_goose_color">grey_goose_color</string>
    <string name="lemon_chiffon_color">lemon_chiffon_color</string>
    <string name="antique_white_color">antique_white_color</string>
    <string name="camera_image">Camera Image</string>
    <string name="take_photo">Take Photo Button</string>
    <string name="want_to_try">Something you definitely want to try 😊</string>
    <string name="nickname">Developer: Dr. Padding</string>
    <string name="contacts">Contact me for cooperation</string>
    <string name="privacy_policy"><a href="https://docs.google.com/document/d/149-SLbhZfnSTibJ115gaFnsM_GFQAnG_/edit">Privacy policy</a></string>
</resources>