<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:gravity="center"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/ib_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/white_color"
        android:src="@drawable/color_circle"
        android:tag="@color/white"
        app:layout_constraintEnd_toStartOf="@id/ib_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:tint="@color/white" />


    <ImageButton
        android:id="@+id/ib_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/black_color"
        android:src="@drawable/color_circle"
        android:tag="@color/black"
        app:layout_constraintEnd_toStartOf="@id/ib_green"
        app:layout_constraintStart_toEndOf="@id/ib_white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:tint="@color/black" />

    <ImageButton
        android:id="@+id/ib_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/green_color"
        android:src="@drawable/color_circle"
        android:tag="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ib_black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:tint="@color/green" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:visibility="visible"
        android:indeterminateTint="@color/grey"
        app:layout_constraintEnd_toEndOf="@id/ib_black"
        app:layout_constraintStart_toStartOf="@id/ib_black"
        app:layout_constraintTop_toBottomOf="@id/ib_black"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>